--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/overs/Downloads/jansi-2.4.0.jar"/>
+	<classpathentry kind="lib" path="src/jansi-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
